--- a/engine1/package.json
+++ b/engine1/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "description": "Simple API for WebGL-1",
   "main": "dist/engine1.js",
+  "homepage": "https://github.com/MichaelLangbein/mgx/tree/main/engine1",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "publish": "npm publish --access public"
   },
   "keywords": [
     "WebGL",
