--- a/consumer/package.json
+++ b/consumer/package.json
@@ -9,10 +9,12 @@
   "author": "Michael Langbein",
   "license": "ISC",
   "dependencies": {
-    "@mgx/engine1": "^0.1.0"
+    "@mgx/engine2": "^0.1.2"
   },
   "devDependencies": {
     "html-webpack-plugin": "^5.3.2",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.4.3",
     "webpack": "^5.54.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.3.0"
