--- a/bicubic-interpolation/package.json
+++ b/bicubic-interpolation/package.json
@@ -16,6 +16,8 @@
   "author": "Michael Langbein <michael_langbein@hotmail.de> (https://michaellangbein.github.io/)",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@types/delaunator": "^3.0.0",
+    "@types/geojson": "^7946.0.8",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.3",
     "webpack": "^5.54.0",
