--- a/inverse-distance/package.json
+++ b/inverse-distance/package.json
@@ -4,7 +4,7 @@
   "description": "Simple inverse-distance interpolation implemented as a WebGL shader",
   "main": "dist/inverse-distance-interpolation.js",
   "types": "dist/inverse-distance-interpolation/src/index.d.ts",
-  "homepage": "https://github.com/MichaelLangbein/mgx/tree/main/interpolation",
+  "homepage": "https://github.com/MichaelLangbein/mgx/tree/main/inverse-distance",
   "scripts": {
     "build": "webpack",
     "publish": "npm publish --access public"
@@ -16,13 +16,14 @@
   "author": "Michael Langbein <michael_langbein@hotmail.de> (https://michaellangbein.github.io/)",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@types/geojson": "^7946.0.8",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.3",
     "webpack": "^5.54.0",
     "webpack-cli": "^4.8.0"
   },
   "dependencies": {
-    "@mgx/engine2": "^0.1.2",
+    "@mgx/engine1": "^0.1.2",
     "geojson": "^0.5.0"
   }
 }
