--- a/_consumer/package.json
+++ b/_consumer/package.json
@@ -4,7 +4,8 @@
   "description": "Generic project using the mgx-libraries",
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack serve"
+    "start": "webpack serve",
+    "build": "webpack"
   },
   "author": "Michael Langbein",
   "license": "ISC",
