--- a/bicubic/package.json
+++ b/bicubic/package.json
@@ -7,7 +7,8 @@
   "homepage": "https://github.com/MichaelLangbein/mgx/tree/main/bicubic-interpolation",
   "scripts": {
     "build": "webpack",
-    "publish": "npm publish --access public"
+    "publish": "npm publish --access public",
+    "start": "webpack serve --config webpack.dev.config.js"
   },
   "keywords": [
     "WebGL",
@@ -21,7 +22,8 @@
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.3",
     "webpack": "^5.54.0",
-    "webpack-cli": "^4.8.0"
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.3.0"
   },
   "dependencies": {
     "@mgx/engine2": "^0.1.2",
