--- a/particle-flow/package.json
+++ b/particle-flow/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@mgx/particle-flow",
-  "version": "0.1.2",
-  "description": "Simple API for WebGL-2",
+  "version": "0.1.4",
+  "description": "Simple particle simulation between a field of points with `speed` values (given as GeoJSON)",
   "main": "dist/particle-flow.js",
   "types": "dist/particle-flow/src/index.d.ts",
   "homepage": "https://github.com/MichaelLangbein/mgx/tree/main/particle-flow",
@@ -29,7 +29,7 @@
     "webpack-dev-server": "^4.3.0"
   },
   "dependencies": {
-    "@mgx/engine1": "file:../engine1",
+    "@mgx/engine1": "^0.1.4",
     "delaunator": "^5.0.0",
     "geojson": "^0.5.0"
   }
