--- a/inverse-distance/package.json
+++ b/inverse-distance/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@mgx/inverse-distance-interpolation",
-  "version": "0.1.2",
+  "version": "0.1.4",
   "description": "Simple inverse-distance interpolation implemented as a WebGL shader",
   "main": "dist/inverse-distance-interpolation.js",
   "types": "dist/inverse-distance-interpolation/src/index.d.ts",
   "homepage": "https://github.com/MichaelLangbein/mgx/tree/main/inverse-distance",
   "scripts": {
     "build": "webpack",
-    "publish": "npm publish --access public"
+    "publish": "npm publish --access public",
+    "start": "webpack serve --config webpack.dev.config.js"
   },
   "keywords": [
     "WebGL",
@@ -20,10 +21,11 @@
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.3",
     "webpack": "^5.54.0",
-    "webpack-cli": "^4.8.0"
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.3.0"
   },
   "dependencies": {
-    "@mgx/engine1": "^0.1.2",
+    "@mgx/engine1": "^0.1.4",
     "geojson": "^0.5.0"
   }
 }
