--- a/bicubic/package.json
+++ b/bicubic/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@mgx/bicubic-interpolation",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Simple bicubic interpolation implemented as a WebGL2 shader",
-  "main": "dist/bicubic-interpolation.js",
+  "main": "dist/bicubic.js",
   "types": "dist/bicubic/src/index.d.ts",
   "homepage": "https://github.com/MichaelLangbein/mgx/tree/main/bicubic-interpolation",
   "scripts": {
@@ -11,8 +11,11 @@
     "start": "webpack serve --config webpack.dev.config.js"
   },
   "keywords": [
-    "WebGL",
-    "API"
+    "WebGL-2",
+    "API",
+    "bicubic",
+    "interpolation",
+    "GeoJSON"
   ],
   "author": "Michael Langbein <michael_langbein@hotmail.de> (https://michaellangbein.github.io/)",
   "license": "Apache-2.0",
@@ -26,7 +29,7 @@
     "webpack-dev-server": "^4.3.0"
   },
   "dependencies": {
-    "@mgx/engine2": "^0.1.2",
+    "@mgx/engine2": "^0.1.3",
     "delaunator": "^5.0.0",
     "geojson": "^0.5.0"
   }
