--- a/ol-tools/package.json
+++ b/ol-tools/package.json
@@ -7,18 +7,29 @@
   "homepage": "https://github.com/MichaelLangbein/mgx/tree/main/ol-tools",
   "scripts": {
     "build": "webpack",
-    "publish": "npm publish --access public"
+    "publish": "npm publish --access public",
+    "start": "webpack serve --config webpack.dev.config.js"
   },
   "keywords": [
     "WebGL",
-    "API"
+    "openlayers",
+    "interpolation"
   ],
   "author": "Michael Langbein <michael_langbein@hotmail.de> (https://michaellangbein.github.io/)",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@types/geojson": "^7946.0.8",
+    "ol": "^6.8.1",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.3",
     "webpack": "^5.54.0",
-    "webpack-cli": "^4.8.0"
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.3.0"
+  },
+  "dependencies": {
+    "@mgx/bicubic-interpolation": "^0.1.3",
+    "@mgx/inverse-distance-interpolation": "^0.1.6",
+    "@mgx/particle-flow": "^0.1.5",
+    "geojson": "^0.5.0"
   }
 }
