--- a/swe/package.json
+++ b/swe/package.json
@@ -18,6 +18,8 @@
   "author": "Michael Langbein <michael_langbein@hotmail.de> (https://michaellangbein.github.io/)",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@types/three": "^0.134.0",
+    "three": "^0.134.0",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.3",
     "webpack": "^5.54.0",
