--- a/engine1/package.json
+++ b/engine1/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mgx/engine1",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Simple API for WebGL-1",
   "main": "dist/engine1.js",
   "types": "dist/engine1/src/index.d.ts",
@@ -17,10 +17,14 @@
   "author": "Michael Langbein <michael_langbein@hotmail.de> (https://michaellangbein.github.io/)",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@types/md5": "^2.3.1",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.3",
     "webpack": "^5.54.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.3.0"
+  },
+  "dependencies": {
+    "md5": "^2.3.0"
   }
 }
