vector-tile backend and frontend now play nicely together

--- a/h3/client/package.json
+++ b/h3/client/package.json
@@ -13,6 +13,7 @@
     "vite": "^4.2.0"
   },
   "dependencies": {
-    "deck.gl": "^8.9.4"
+    "deck.gl": "^8.9.4",
+    "maplibre-gl": "^2.4.0"
   }
 }
