--- a/h3/client3/package.json
+++ b/h3/client3/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "d3-axis": "^3.0.0",
     "d3-color": "^3.1.0",
+    "d3-scale": "^4.0.2",
     "d3-selection": "^3.0.0",
     "moment": "^2.29.4",
     "ol": "^7.4.0",
@@ -30,6 +32,9 @@
     "@angular-devkit/build-angular": "^16.1.3",
     "@angular/cli": "~16.1.3",
     "@angular/compiler-cli": "^16.1.0",
+    "@types/d3-axis": "^3.0.2",
+    "@types/d3-scale": "^4.0.3",
+    "@types/d3-selection": "^3.0.5",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
