--- a/h3/client4/package.json
+++ b/h3/client4/package.json
@@ -14,6 +14,10 @@
     "vite": "^4.4.0"
   },
   "dependencies": {
+    "d3-axis": "^3.0.0",
+    "d3-color": "^3.1.0",
+    "d3-scale": "^4.0.2",
+    "d3-selection": "^3.0.0",
     "geojson": "^0.5.0",
     "ol": "^7.4.0"
   }
